scrollbar fix

--- a/src/app/location/location.component.scss
+++ b/src/app/location/location.component.scss
@@ -1,59 +1,60 @@
 .wholePage{
-    //background-color: blue !important;
-    background-image: url(/assets/images/app-bg-new.png);
-    background-size: 100% 100%;
-    width: 100vw;
-    height: 100vh;
-    margin: 0 !important;
-    padding: 0 !important;
-    overflow: scroll;
-  }
-  
-  .menu {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    background-color: rgb(255, 255, 255, 0.2);
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  
-  .menu button {
-    padding: 10px 30px;
-    border: none;
-    border-radius: 5px;
-    background-color: hsla(203, 94%, 20%, 0.9);
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .menu button:hover {
-    background-color: rgb(1, 39, 62);
-  }
+  background-image: url(/assets/images/app-bg-new.png);
+  background-size: 100% 100%;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 !important;
+  padding: 0 !important;
+}
 
-  .content {
-    overflow-y: auto; /* Allow vertical scrollbar when content overflows */
-    max-height: calc(100vh - 6vh); /* Adjust the value to accommodate the height of your header */
-  }
-  
-  /* For webkit-based browsers like Chrome and Safari */
-  .content::-webkit-scrollbar {
-    width: 12px; /* Adjust the width as needed */
-  }
-  
-  .content::-webkit-scrollbar-track {
-    background: white; /* Set the background color of the scrollbar track to white */
-  }
-  
-  .content::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.8); /* Set the color of the scrollbar thumb */
-    border-radius: 6px; /* Round the corners of the scrollbar thumb */
-  }
-  
-  .content::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.4); /* Set the color of the scrollbar thumb on hover */
-  }
+.menu {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(255, 255, 255, 0.2);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.menu button {
+  padding: 10px 30px;
+  border: none;
+  border-radius: 5px;
+  background-color: hsla(203, 94%, 20%, 0.9);
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.menu button:hover {
+  background-color: rgb(1, 39, 62);
+}
+
+.content {
+  overflow-y: auto; /* Allow vertical scrollbar when content overflows */
+  max-height: calc(100vh - 6vh); /* Adjust the value to accommodate the height of your header */
+  overflow: scroll;
+}
+
+/* For webkit-based browsers like Chrome and Safari */
+.content::-webkit-scrollbar {
+  width: 12px; /* Adjust the width as needed */
+}
+
+.content::-webkit-scrollbar-track {
+  background: white; /* Set the background color of the scrollbar track to white */
+}
+
+.content::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.8); /* Set the color of the scrollbar thumb */
+  border-radius: 6px; /* Round the corners of the scrollbar thumb */
+  border: none; /* Remove the border */
+  box-shadow: none; /* Remove any box-shadow */
+}
+
+.content::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.4); /* Set the color of the scrollbar thumb on hover */
+}
